@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="ktorrent" version="12">
+<kpartgui name="ktorrent" version="13">
 <MenuBar>
   <Menu name="file"><text>&amp;File</text>
 	  <Action name="file_new"/>
@@ -57,7 +57,6 @@
 	<Separator/>
 	<Action name="view_rename_torrent" />
 	<Action name="view_announce" />
-	<Action name="view_scrape" />
 	<Action name="view_preview" />
 	<Separator/>
 	<Menu name="OpenDirMenu" icon="folder-open"><text>Open Directory</text>
