@@ -50,6 +50,7 @@ Changes in 3.2rc1 :
 - Disable PEX and DHT actions when multiple torrents are selected
 - Reorder queue when additional files are selected and the torrent is queued as a seed.
 - Fix bug causing data to be reset every GUI update when editing the name of a torrent
+- Move scrape from view menu to tracker tab (179415)
 
 Changes in 3.2beta1 :
 - Ask to create directory in fileselectdlg, if it does not exist (163965)
